# MkViewer

./: .gitignore  .mise.yaml  AGENTS.md  LICENSE  README.md  index.html  justfile  package.json  pnpm-lock.yaml  tsconfig.json
.claude/: settings.local.json
docs/: markdown-viewer-design_1.md
sample/: sample.md  testfiles.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cli.rs  commands.rs  main.rs  watcher.rs
src/components/: AboutPanel.tsx  MarkdownRenderer.tsx  MermaidBlock.tsx  SettingsPanel.tsx  StatusBar.tsx  ThemeToggle.tsx
src/hooks/: useFileWatcher.ts  useSettings.ts  useTheme.ts
src/lib/: markdownPipeline.tsx  rehypeColorSwatch.ts  remarkCallout.ts
src/styles/: app.css  markdown.css  settings.css
